<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ao_thun"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/tv_list_ao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img_product"
        android:text="@string/list_product_1"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/list_ao_thun"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_ten_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_list_ao"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img_product"
        android:text="@string/ten_shop"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/list_ao_thun"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_gia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/list_ten_shop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img_product"
        android:text="@string/list_gia_ban"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/list_gia_ban"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>